<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addRecipe">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="cursive"
        android:text="@string/add_new_recipe"
        android:textAlignment="center"
        android:textColor="#B3061B"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/addRecipe_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:hint="@string/recipe_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:id="@+id/addRecipe_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/recipe_description"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addRecipe_name" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="40sp"
        android:layout_height="40sp"
        android:contentDescription="@string/image"
        app:layout_constraintEnd_toStartOf="@+id/addRecipe_addImage"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/addRecipe_addImage"
        app:srcCompat="@drawable/ic_image" />

    <Button
        android:id="@+id/addRecipe_addImage"
        android:layout_width="177dp"
        android:layout_height="40sp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="96dp"
        android:background="#B3061B"
        android:text="@string/add_image"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addRecipe_desc" />

    <Button
        android:id="@+id/addRecipe_addRecipeButton"
        android:layout_width="215dp"
        android:layout_height="46dp"
        android:layout_marginTop="60dp"
        android:background="#B3061B"
        android:text="@string/add_recipe"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addRecipe_addImage" />

</androidx.constraintlayout.widget.ConstraintLayout>